--- a/.github/workflows/GCP.yaml
+++ b/.github/workflows/GCP.yaml
@@ -15,13 +15,8 @@ jobs:
       uses: actions/checkout@v4
     - name: Create .env file
       run: |
-        echo "FIREBASE_API_KEY=${{ secrets.DBHOST }}" >> .env
-        echo "SMTP_HOST=${{ secrets.DBUSER }}" >> .env
-        echo "SMTP_PORT=${{ secrets.DBPASSWORD }}" >> .env
-        echo "SMTP_USERNAME=${{ secrets.DBPORT }}" >> .env
-        echo "SMTP_PASSWORD=${{ secrets.DBNAME }}" >> .env
-      working-directory: ${{ github.workspace }}
-
+        echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
+      working-directory: ${{ github.workspace }}
 
     - name: Authenticate with gcloud CLI
       uses: google-github-actions/auth@v1
